load("//tools/bazel/vite:vite.bzl", "vite_build", "vite_dev_server")
load("//tools/bazel:pkg.bzl", "tar")
load("//tools/bazel/oci:defs.bzl", "oci_deliver", "oci_image")

SRCS = [
    "//:node_modules/vite",
    "//:node_modules/postcss-preset-mantine",
    "//:node_modules/postcss-simple-vars",
    "//apps/mops_app/public",
    "//apps/mops_app/src",
    "index.html",
    "package.json",
    "postcss.config.cjs",
    "vite.config.ts",
]

vite_build(
    name = "build",
    srcs = SRCS,
)

vite_dev_server(
    name = "mops_app",
    data = SRCS,
)

tar(
    name = "tar",
    srcs = [":build"],
    package_dir = "/usr/share/nginx/html/",
    strip_prefix = "dist",
)

oci_image(
    name = "image",
    base = "@nginx_alpine_slim",
    tars = [":tar"],
)

oci_deliver(
    name = "deliver",
    image = ":image",
    repo_suffix = "mops-app",
)
