load("//tools/bazel/vite:vite.bzl", "vite_build", "vite_dev_server")
load("@rules_oci//oci:defs.bzl", "oci_image", "oci_tarball")
load("@rules_pkg//:pkg.bzl", "pkg_tar")
load("//tools/bazel:js.bzl", "js_library")

js_library(
    name = "codegen",
    srcs = ["codegen.ts"],
    visibility = ["//apps/tasklist/src/__generated__:__pkg__"],
)

SRCS = [
    "index.html",
    "package.json",
    "vite.config.ts",
]

DEPS = [
    "//apps/tasklist/src",
    "//apps/tasklist/public",
    "//:node_modules/@vitejs/plugin-react",
    "//:node_modules/vite",
]

vite_build(
    name = "build",
    srcs = SRCS + DEPS,
)

vite_dev_server(
    name = "tasklist",
    data = SRCS + DEPS,
)

pkg_tar(
    name = "tar",
    srcs = [":build"],
    # The vite devserver needs to make requests to "base: /task/" when behind the
    # proxy since the $http_referer can't be used to identify the right app to proxy to.
    # Keep aligned with:
    # - apps/task/vite.config.ts: "base"
    # - infra/local/proxy/nginx.conf: "proxy_pass"
    package_dir = "/usr/share/nginx/html/task",
    strip_prefix = "dist",
)

oci_image(
    name = "image",
    base = "@nginx_debian_slim",
    tars = [":tar"],
)

oci_tarball(
    name = "tarball",
    image = ":image",
    repo_tags = ["lab/tasklist:latest"],
    visibility = [
        "//:__pkg__",
        "//apps/organizer/e2e:__pkg__",
    ],
)
