load("@rules_oci//oci:defs.bzl", "oci_image", "oci_tarball")
load("@rules_pkg//:pkg.bzl", "pkg_tar")

alias(
    name = "task",
    actual = "//contexts/task/src/main",
)

pkg_tar(
    name = "tar",
    # Bring the java_binary
    srcs = ["//contexts/task/src/main:main_deploy.jar"],
    include_runfiles = True,
    strip_prefix = ".",
)

oci_image(
    name = "image",
    base = "@distroless_java",
    entrypoint = [
        "java",
        "-jar",
        "/src/main/main_deploy.jar",
    ],
    tars = [":tar"],
)

# Run a local container with:
# $ bazel run :tarball
# $ docker run --rm lab/task:latest
oci_tarball(
    name = "tarball",
    image = ":image",
    repo_tags = ["lab/task:latest"],
)
