load("//tools/bazel/vite:vite.bzl", "vite_build", "vite_dev_server")

SRCS = [
    "public/vite.svg",
    "index.html",
    "package.json",
    "vite.config.ts",
]

DEPS = [
    "//learn/vite/src",
    "//:node_modules/@vitejs/plugin-react",
]

vite_build(
    name = "build",
    srcs = SRCS + DEPS,
)

vite_dev_server(
    name = "vite",
    data = SRCS + DEPS,
)
