load("@aspect_rules_js//npm:defs.bzl", "npm_package")
load("//tools/bazel/storybook:storybook.bzl", "storybook_build", "storybook_dev_server")
load("@rules_oci//oci:defs.bzl", "oci_image", "oci_load")
load("//tools/bazel:pkg.bzl", "tar")

npm_package(
    name = "pkg",
    srcs = [
        "package.json",
        "//libs/bubbles/src",
    ],
    visibility = ["//visibility:public"],
)

STORYBOOK_SRCS = [
    ".storybook/main.ts",
    ".storybook/preview.tsx",
]

STORYBOOK_DEPS = [
    "//libs/bubbles/src/organisms/shell:stories",
    "//libs/bubbles/src/components/MonthRangePicker:stories",
    "//:node_modules/@mantine/core",
    "//:node_modules/@mantine/dates",
    "//:node_modules/@mantine/hooks",
    "//:node_modules/@tabler/icons-react",
    "//:node_modules/@storybook/addon-essentials",
    "//:node_modules/@storybook/addon-interactions",
    "//:node_modules/@storybook/addon-links",
    "//:node_modules/@storybook/blocks",
    "//:node_modules/@storybook/react",
    "//:node_modules/@storybook/react-vite",
    "//:node_modules/@storybook/testing-library",
    "//:node_modules/react",
    "//:node_modules/react-dom",
    "//:node_modules/vite",
]

storybook_build(
    name = "build_storybook",
    srcs = STORYBOOK_SRCS + STORYBOOK_DEPS,
)

storybook_dev_server(
    name = "storybook",
    data = STORYBOOK_SRCS + STORYBOOK_DEPS,
)

tar(
    name = "tar",
    srcs = [":build_storybook"],
    package_dir = "/usr/share/nginx/html",
    strip_prefix = "storybook-static",
)

oci_image(
    name = "image",
    base = "@nginx_alpine_slim",
    tars = [":tar"],
)

oci_load(
    name = "load",
    image = ":image",
    repo_tags = ["lab/bubbles:latest"],
    visibility = ["//:__pkg__"],
)
