load("@rules_multirun//:defs.bzl", "command", "multirun")

command(
    name = "mops_service",
    command = "//projects/mops/mops_service/src/main",
)

command(
    name = "app",
    args = ["--open"],
    command = "//projects/mops/app:dev",
)

multirun(
    name = "mops",
    commands = [
        ":mops_service",
        ":app",
    ],
    jobs = 0,
)
