load("@rules_multirun//:defs.bzl", "command", "multirun")

command(
    name = "service",
    command = "//projects/mops/service/src/main",
)

command(
    name = "app",
    args = ["--open"],
    command = "//projects/mops/app:dev",
)

multirun(
    name = "mops",
    commands = [
        ":service",
        ":app",
    ],
    jobs = 0,
)
