load("@aspect_rules_ts//ts:defs.bzl", "ts_project")
load("@aspect_rules_jasmine//jasmine:defs.bzl", "jasmine_test")

package(default_visibility = ["//:__subpackages__"])

ts_project(
    name = "schematics",

    tsconfig = "//:tsconfig",
    source_map = True,
    declaration = True,

    # glob is a quick way to select all the code,
    # but has performance penalty in that Bazel must evaluate it.
    srcs = glob(
        include = ["**/*.ts"],
        exclude = [
            "**/*.spec.ts",
        ],
    ),
    data = ["collection.json"],
    deps = [
        "//:node_modules/@types/node",
        "//:node_modules/@angular-devkit/schematics", 
        "//:node_modules/@schematics/angular", 
    ],
)

ts_project(
    name = "schematics-test-lib",
    testonly = True,

    tsconfig = "//:tsconfig",
    source_map = True,
    declaration = True,

    srcs = glob(
        include = [
            "**/*.spec.ts",
        ],
    ),
    deps = [
        ":schematics",
        "//:node_modules/@angular-devkit/schematics", 
        "//:node_modules/@types/jasmine",
        "//:node_modules/jasmine-core",
        "//:node_modules/tslib",
        "//:node_modules/@schematics/angular", 
    ],
)

jasmine_test(
    name = "schematics-test",
    data = [
        ":schematics-test-lib",
        "collection.json",
        "package.json",
    ],
    args = ["**/*.spec.js"],
    chdir = package_name()
)
