load("@aspect_rules_ts//ts:defs.bzl", "ts_project")
load("@aspect_rules_jasmine//jasmine:defs.bzl", "jasmine_test")

package(default_visibility = ["//:__subpackages__"])

ts_project(
    name = "schematics",

    # glob is a quick way to select all the code,
    # but has performance penalty in that Bazel must evaluate it.
    srcs = glob(
        include = ["**/*.ts"],
        exclude = [
            "**/*.spec.ts",
        ],
    ),
    data = ["collection.json"],
    declaration = True,
    source_map = True,
    tsconfig = "//:tsconfig",
    deps = [
        "//:node_modules/@angular-devkit/schematics",
        "//:node_modules/@schematics/angular",
        "//:node_modules/@types/node",
    ],
)

ts_project(
    name = "schematics-test-lib",
    testonly = True,
    srcs = glob(
        include = [
            "**/*.spec.ts",
        ],
    ),
    declaration = True,
    source_map = True,
    tsconfig = "//:tsconfig",
    deps = [
        ":schematics",
        "//:node_modules/@angular-devkit/schematics",
        "//:node_modules/@schematics/angular",
        "//:node_modules/@types/jasmine",
        "//:node_modules/tslib",
    ],
)

jasmine_test(
    name = "schematics-test",
    args = ["**/*.spec.js"],
    chdir = package_name(),
    data = [
        "collection.json",
        "package.json",
        ":schematics-test-lib",
    ],
)
