load("//tools/bazel:ts.bzl", "ts_project")
load("//tools/bazel:js.bzl", "js_library")

SRC_PATHS = [
    "**/*.tsx",
    "**/*.ts",
]

TEST_PATHS = [
    "**/*.test.tsx",
    "**/*.test.ts",
]

ts_project(
    name = "src_ts",
    srcs = glob(
        include = SRC_PATHS,
        exclude = TEST_PATHS,
    ),
    deps = [
        "//:node_modules/@mantine/core",
        "//:node_modules/@types/react",
        "//:node_modules/@types/react-dom",
        "//:node_modules/react",
        "//:node_modules/react-dom",
        "//:node_modules/react-router-dom",
        "//:node_modules/vite",
    ],
)

ts_project(
    name = "test_ts",
    srcs = glob(TEST_PATHS),
    visibility = [
        "//apps/app_template:__pkg__",
    ],
    deps = [
        ":src_ts",
        "//:node_modules/@vitest/expect",
        "//apps/app_template/src/test",
    ],
)

js_library(
    name = "src",
    srcs = glob([
        "**/*.css",
    ]),
    visibility = [
        "//apps/app_template:__pkg__",
    ],
    deps = [
        ":src_ts",
    ],
)
