load("@aspect_rules_cypress//cypress:defs.bzl", "cypress_test")
load("@npm//:wait-on/package_json.bzl", wait_on_bin = "bin")

cypress_test(
    name = "e2e",
    size = "small",
    args = [
        "run",
        "--config-file=cypress.config.ts",
    ] + select({
        "@bazel_tools//src/conditions:darwin": [],
        "//conditions:default": ["--browser=../../../../chrome_linux/chrome"],
    }),
    browsers = select({
        # Chrome for mac contains files with spaces which are bazel incompatible.
        # Use built in electron binary browser instead.
        "@bazel_tools//src/conditions:darwin": [],
        "//conditions:default": ["@chrome_linux//:all"],
    }),
    data = [
        "autojournal.cy.ts",
        "cypress.config.ts",
        "routing.cy.ts",
        "tsconfig.json",
        "//:node_modules/typescript",
    ],
    tags = ["manual"],
)

wait_on_bin.wait_on_binary(
    name = "wait_on_task",
    args = ["http-get://localhost:3001/actuator/health"],
)
