load("//tools/bazel:ts.bzl", "node_ts_project")
load("@aspect_rules_cypress//cypress:defs.bzl", "cypress_module_test")
load("@npm//:wait-on/package_json.bzl", wait_on_bin = "bin")

node_ts_project(
    name = "ts",
    deps = [
        "//:node_modules/@types/node",
        "//:node_modules/cypress",
    ],
)

cypress_module_test(
    name = "e2e",
    size = "small",
    data = [
        "autojournal.cy.js",
        "cypress.config.js",
        "routing.cy.js",
    ],
    runner = "runner.js",
    tags = ["manual"],
)

wait_on_bin.wait_on_binary(
    name = "wait_on_task",
    args = ["http-get://localhost:3001/actuator/health"],
)
