load("//tools/bazel:fe.bzl", "fe_library")

fe_library(
    name = "src",
    visibility = [
        "//apps/journal_app:__pkg__",
    ],
    deps = [
        "//:node_modules/@apollo/client",
        "//:node_modules/@lab/bubbles",
        "//:node_modules/@tabler/icons-react",  # TODO: could be included by @lab/bubbles?
        "//apps/journal_app/src/entries",
    ],
)
