load("//tools/bazel:ts.bzl", "ts_project")

ts_project(
    name = "src",
    srcs = glob([
        "**/*.tsx",
        "**/*.ts",
    ]),
    visibility = [
        "//apps/mops_app:__pkg__",
    ],
    deps = [
        "//:node_modules/@mantine/core",
        "//:node_modules/@types/react",
        "//:node_modules/@types/react-dom",
        "//:node_modules/react",
        "//:node_modules/react-dom",
    ],
)
