load("//tools/bazel:ts.bzl", "ts_project")
load("//tools/bazel:js.bzl", "js_library")

ts_project(
    name = "src_ts",
    srcs = glob([
        "**/*.tsx",
        "**/*.ts",
    ]),
    deps = [
        "//:node_modules/@mantine/core",
        "//:node_modules/@mantine/hooks",
        "//:node_modules/@tabler/icons-react",
        "//:node_modules/@types/react",
        "//:node_modules/@types/react-dom",
        "//:node_modules/react",
        "//:node_modules/react-dom",
        "//:node_modules/react-router-dom",
        "//:node_modules/vite",
    ],
)

js_library(
    name = "src",
    srcs = glob([
        "**/*.css",
    ]),
    visibility = [
        "//apps/mops_app:__pkg__",
    ],
    deps = [
        ":src_ts",
    ],
)
