load("@rules_oci//oci:defs.bzl", "oci_image", "oci_load")
load("//tools/bazel:pkg.bzl", "tar")

tar(
    name = "nginx_conf_tar",
    srcs = [":default.conf.template"],
    package_dir = "/etc/nginx/templates",
)

oci_image(
    name = "image",
    base = "@nginx_alpine_slim",
    tars = [
        ":nginx_conf_tar",
    ],
)

# Tag and run a local container with:
# $ bazel run :load
# $ docker run --rm lab/proxy:latest
oci_load(
    name = "load",
    image = ":image",
    repo_tags = ["lab/proxy:latest"],
    visibility = [
        "//projects/organizer:__pkg__",
    ],
)

filegroup(
    name = "tarball.tar",
    srcs = [":load"],
    output_group = "tarball",
    visibility = ["//projects/organizer/e2e:__pkg__"],
)
