load("@aspect_rules_cypress//cypress:defs.bzl", "cypress_test")

cypress_test(
    name = "cli_test",
    size = "small",
    args = [
        "run",
        "--config-file=cypress.config.ts",
    ] + select({
        "@bazel_tools//src/conditions:darwin": [],
        "//conditions:default": ["--browser=../../../../chrome_linux/chrome"],
    }),
    browsers = select({
        # Chrome for mac contains files with spaces which are bazel incompatible.
        # Use built in electron binary browser instead.
        "@bazel_tools//src/conditions:darwin": [],
        "//conditions:default": ["@chrome_linux//:all"],
    }),
    chdir = package_name(),
    data = [
        "cli_test.cy.ts",
        "cypress.config.ts",
        "tsconfig.json",
        "//:node_modules/typescript",
    ],
)
