load("@aspect_rules_cypress//cypress:defs.bzl", "cypress_test")

cypress_test(
    name = "cli_test",
    size = "small",
    args = [
        "run",
        "--config-file=cypress.config.ts",
    ],
    chdir = package_name(),
    data = [
        "cli_test.cy.ts",
        "cypress.config.ts",
        "tsconfig.json",
        "//:node_modules/typescript",
    ],
)
