load("@aspect_rules_jest//jest:defs.bzl", "jest_test")
load("@aspect_rules_ts//ts:defs.bzl", "ts_config")
load("//tools/bazel:ts.bzl", "ts_project")

ts_project(
    name = "src_ts",
    srcs = ["Button.tsx"],
    data = ["//:node_modules/react"],
    transpiler = "tsc",
    tsconfig = ":tsconfig",
    deps = [
        "//:node_modules/@testing-library/react",
        "//:node_modules/@types/react",
        "//:node_modules/antd",
    ],
)

ts_project(
    name = "test_ts",
    srcs = ["Button.test.tsx"],
    transpiler = "tsc",
    tsconfig = ":tsconfig",
    deps = [
        ":src_ts",
        "//:node_modules/@jest/globals",
    ],
)

ts_config(
    name = "tsconfig",
    src = "tsconfig.json",
    deps = ["//:tsconfig_base"],
)

jest_test(
    name = "test",
    config = "jest.config.js",
    data = [
        ":test_ts",
        "//:node_modules/jest-environment-jsdom",
    ],
    node_modules = "//:node_modules",
)
